<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ResourceName">

    <data>

        <variable
            name="BangumiFollowList"
            type="com.imcys.bilibilias.common.base.model.common.BangumiFollowList" />

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.activity.BangumiFollowLogActivity">

        <com.imcys.bilibilias.common.base.view.AsTopNavigationLayout
            android:id="@+id/bangumi_follow_log_top"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/tool_log_export_home_top_title" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/tool_activity_bangumi_follow_log_data_overview"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/log_export_tool_item_bg"
                    android:padding="10dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{`总追番数：` + BangumiFollowList.data.total}"
                        android:textColor="?attr/colorPrimary" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/tool_activity_bangumi_follow_log_export_configuration"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content"
                    android:background="@drawable/log_export_tool_item_bg"
                    android:padding="10dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tool_activity_bangumi_follow_log_export_as"
                        android:textColor="?attr/colorPrimary" />

                    <RadioGroup
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton

                            android:buttonTint="?attr/colorPrimary"
                            android:checked="true"
                            android:text="excel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </RadioGroup>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content"
                    android:background="@drawable/log_export_tool_item_bg"
                    android:padding="10dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tool_activity_bangumi_follow_log_header_context"
                        android:textColor="?attr/colorPrimary" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/bangumi_follow_log_selectedLogHeaders_rv"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tool_activity_bangumi_follow_log_header_optional"
                        android:textColor="?attr/colorPrimary" />

                    <androidx.recyclerview.widget.RecyclerView
                       android:id="@+id/bangumi_follow_log_defaultLogHeaders_rv"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <Button
                    android:id="@+id/bangumi_follow_log_finish_bt"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/log_export_bt_bg"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:text="@string/tool_activity_bangumi_follow_log_finish_button"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>